--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "axios-auth-refresh": "^3.1.0",
         "vue-router": "^3.5.1",
         "vuex": "^3.6.2"
     }
