--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "@fortawesome/fontawesome-free": "^5.15.3",
+        "axios": "^0.21.1",
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.21",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^4.0.0",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.12",
@@ -25,8 +26,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "axios-auth-refresh": "^3.1.0",
+        "@mdi/font": "^5.9.55",
         "vue-router": "^3.5.1",
+        "vuetify": "^2.5.4",
         "vuex": "^3.6.2"
     }
 }
