--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
         "axios": "^0.21.1",
-        "laravel-mix": "^6.0.27",
+        "bootstrap": "^4.0.0", 
+        "jquery": "^3.2", 
+        "laravel-mix": "^6.0.27", 
+        "lodash": "^4.17.19", 
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^4.0.0",
