--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
         "axios": "^0.21.1",
-        "bootstrap": "^4.0.0", 
-        "jquery": "^3.2", 
-        "laravel-mix": "^6.0.27", 
-        "lodash": "^4.17.19", 
+        "bootstrap": "^4.0.0",
+        "jquery": "^3.2",
+        "laravel-mix": "^6.0.27",
+        "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^4.0.0",
@@ -27,8 +27,9 @@
     },
     "dependencies": {
         "@mdi/font": "^5.9.55",
-        "ckeditor4-vue": "^1.3.2",
+        "iview": "^3.5.4",
         "moment": "^2.29.1",
+        "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.5.1",
         "vue-toasted": "^1.1.28",
         "vuetify": "^2.5.4",
