--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "postinstall": "npm run prod"
+        "postinstall": "npm run production",
+        "heroku-prebuild": "npm install -f",
+        "heroku-postbuild": "npm run build"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
