--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "mix --production",
         "postinstall": "npm run production",
         "heroku-prebuild": "npm install -f",
-        "heroku-postbuild": "npm run build"
+        "heroku-postbuild": "npm run production"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
