--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production",
-        "postinstall": "npm run production",
-        "heroku-prebuild": "npm install -f",
-        "heroku-postbuild": "npm run production"
-    },
-    "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.3",
-        "axios": "^0.21.1",
-        "bootstrap": "^4.0.0",
-        "jquery": "^3.2",
-        "laravel-mix": "^6.0.27",
-        "lodash": "^4.17.19",
-        "popper.js": "^1.12",
-        "postcss": "^8.1.14",
-        "resolve-url-loader": "^4.0.0",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
-        "vue": "^2.6.14",
-        "vue-loader": "^15.9.8",
-        "vue-template-compiler": "^2.6.14"
-    },
-    "dependencies": {
-        "@mdi/font": "^5.9.55",
-        "iview": "^3.5.4",
-        "moment": "^2.29.1",
-        "vue-quill-editor": "^3.0.6",
-        "vue-router": "^3.5.1",
-        "vue-toasted": "^1.1.28",
-        "vuetify": "^2.5.4",
-        "vuex": "^3.6.2"
-    }
+  "private": true,
+  "engines": {
+    "node": "14.x",
+    "npm": "8.x"
+  },
+  "scripts": {
+    "dev": "npm run development",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "prod": "npm run production",
+    "production": "mix --production",
+    "postinstall": "npm run production",
+    "heroku-prebuild": "npm install -f",
+    "heroku-postbuild": "npm run production"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.2",
+    "laravel-mix": "^6.0.27",
+    "lodash": "^4.17.19",
+    "popper.js": "^1.12",
+    "postcss": "^8.1.14",
+    "resolve-url-loader": "^4.0.0",
+    "sass": "^1.20.1",
+    "sass-loader": "^8.0.0",
+    "vue": "^2.6.14",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14"
+  },
+  "dependencies": {
+    "@mdi/font": "^5.9.55",
+    "moment": "^2.29.1",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.5.1",
+    "vue-toasted": "^1.1.28",
+    "vuetify": "^2.5.4",
+    "vuex": "^3.6.2"
+  }
 }
